# panorama_stitching

./: CMakeLists.txt  README.md
src/: function.cpp  function.h  main.cpp  sift_extractor.cpp  sift_extractor.h
